United StatesChange Country, Oracle Worldwide Web Sites Communities I am a... I want to...
Bug ID: 7167142 Issue warning when finding a .hotspotrc or .hotspot_compiler file that isn't used
7167142 : Issue warning when finding a .hotspotrc or .hotspot_compiler file that isn't used

Details
Type:
Bug
Submit Date:
2012-05-08
Status:
Closed
Updated Date:
2012-11-07
Project Name:
JDK
Resolved Date:
2012-07-16
Component:
hotspot
OS:
generic
Sub-Component:
runtime
CPU:
generic
Priority:
P2
Resolution:
Fixed
Affected Versions:
hs23.2
Fixed Versions:
hs23.2

Related Reports
Backport:
Backport:
Backport:
Backport:
Backport:
Backport:
Backport:
Backport:
Backport:
Relates:

Sub Tasks

Description
See comments

                                    

Comments
EVALUATION

http://hg.openjdk.java.net/hsx/hotspot-emb/hotspot/rev/3759236eea14
                                     
2012-07-14
EVALUATION

http://hg.openjdk.java.net/hsx/hotspot-gc/hotspot/rev/3759236eea14
                                     
2012-07-02



Hardware and Software, Engineered to Work Together