7167142: Consider a warning when finding a .hotspotrc or .hotspot_compiler file that isn't used

Send warnings to output stream

Reviewed-by: dholmes, fparain